# messenger

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/: client.cpp  client.h  client.ui  main.cpp  message.cpp  message.h  messenger.cpp  messenger.h  server.cpp  server.h
